# Remarkable_morning_news_2

./: .dockerignore  .gitignore  Dockerfile  LICENSE.txt  README.md  README_RUS.md  Remarkable_news.json  docker-compose.yml  pyproject.toml
remarkable_news/: __init__.py  config.py  db.py  delivery.py  fetcher.py  main.py  pipeline.py
remarkable_news/static/: app.css  app.js  index.html
remarkable_news/templates/: edition.html
tests/: test_core.py  test_pipeline.py
