[project]
name = "remarkable-news"
version = "0.1.0"
description = "Reliable RSS to reMarkable newspaper service"
requires-python = ">=3.12"
dependencies = [
  "bleach==6.2.0",
  "fastapi==0.116.1",
  "feedparser==6.0.11",
  "httpx==0.28.1",
  "jinja2==3.1.6",
  "python-multipart==0.0.20",
  "trafilatura==2.0.0",
  "uvicorn[standard]==0.35.0",
]

[project.optional-dependencies]
dev = ["pytest==8.4.1", "ruff==0.12.4"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
